fixed issues with modal population, and made it function to be more human readable

--- a/client/src/components/letterControl.css
+++ b/client/src/components/letterControl.css
@@ -72,7 +72,7 @@ color: var(--tertiary)
   color:black;
   font-size:20px;
 }
-.fa-angery{
+.fa-angry{
   color:black;
   font-size:20px;
 }
